--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -13,6 +13,10 @@
   padding-right: 10vw;
 }
 
+.form-inputs {
+  border-top: 0px transparent !important;
+}
+
 
 .edit-user-title {
   padding-left: 3vw;
