--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,12 +5,11 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation">
     <div class="animated-icon2"><span class="navbar-toggler-icon"></span></div>
   </button>
-
   <div class="desktop-nav" >
     <ul class="navbar-nav mr-auto">
       <% if current_user %>
         <li class="nav-item" id="home-step2">
-          <%= link_to 'New Opportunity', new_problem_path, class: 'nav-link' %>
+          <%= link_to 'New Opportunity', new_opportunity_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <%= link_to 'Conversations', conversations_path, class: 'nav-link' %>
@@ -32,8 +31,6 @@
         </li>
       <% end %>
     </ul>
-
-
     <% if current_user && current_page?('/') %>
       <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get" id="home-step3">
         <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a postal code" aria-label="Change Location" name="location_term">
@@ -41,37 +38,34 @@
       </form>
     <% end %>
   </div>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <div class="mobile-nav">
-        <ul class="navbar-nav mr-auto">
-          <% if current_user %>
-            <li class="nav-item">
-              <%= link_to 'New Opportunity', new_problem_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Conversations', conversations_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/edit">Edit Account</a>
-            </li>
-            <li class="nav-item">
-              <div class="nav-link"><%= link_to 'Sign Out', '/users/sign_out', method: :delete %></div>
-            </li>
-          <% else %>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/sign_in">Sign In/Register</a>
-            </li>
-          <% end %>
-        </ul>
-
-        <% if current_user && current_page?('/') %>
-          <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
-            <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a postal code" aria-label="Change Location" name="location_term">
-            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="/" value="location_term">Change Location</button>
-          </form>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="mobile-nav">
+      <ul class="navbar-nav mr-auto">
+        <% if current_user %>
+          <li class="nav-item">
+            <%= link_to 'New Opportunity', new_opportunity_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Conversations', conversations_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/edit">Edit Account</a>
+          </li>
+          <li class="nav-item">
+            <div class="nav-link"><%= link_to 'Sign Out', '/users/sign_out', method: :delete %></div>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/sign_in">Sign In/Register</a>
+          </li>
         <% end %>
-      </div>
+      </ul>
+      <% if current_user && current_page?('/') %>
+        <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get">
+          <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a postal code" aria-label="Change Location" name="location_term">
+          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="/" value="location_term">Change Location</button>
+        </form>
+      <% end %>
     </div>
-
+  </div>
 </nav>
