--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -1,4 +1,7 @@
 <div class="donation-info-container">
+  <div class="jbh-standard-title">
+    Interested in donating or helping us come to market?
+  </div>
   <div class="donation-widget">
     <iframe frameborder = "0" height="100%" scrolling="yes"  src = "https://give.donatekindly.org/jb701/makedonation/donation/d6efeb1e-5dd3-4f04-bbe5-51890ba2eddb"  class="donation-frame"></iframe>
   </div>
