--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -1,4 +1,5 @@
-//*= require introjs
+//= require introjs
+//= require simple_calendar
 
 @import "/*";
 @import "bootstrap";
@@ -12,6 +13,12 @@ html, body {
   font-family: 'Montserrat', sans-serif !important;
   height: 100vh;
   margin: 0;
+  font-size: calc(0.5em + 0.5vw);
+
+  @include respond-to(handhelds) {
+    font-size: calc(0.8em + 0.5vw)
+  } 
+
 }
 
 h1, h2, h3, h4, h5 {
@@ -24,6 +31,18 @@ h1 {
 
 p, a, span {
 
+}
+
+.jbh-standard-title {
+  font-size: 2.8em;
+  padding-left: 5vw;
+  margin-right: 20vw;
+  padding-top: 2vh;
+  color: $darkgrey;
+  border-bottom: 2px solid $lightgrey;
+  @include respond-to(handhelds) {
+    font-size: 2em;
+  }
 }
 
 .btn-success {
