--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,15 +1,12 @@
-<div class="edit-user-title">
-  <h3>My Account</h3>
+<div class="jbh-standard-title">
+  My Account
 </div>
-
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
-
   <div class="form-inputs user-edit-form-inputs">
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
-
     <div class="user-personal-info">
       <%= f.input :first_name,
                   hint: "This will be publicly visible." %>
@@ -22,28 +19,23 @@
       <%= f.input :birth_date, 
                   label: "Birth Date",
                   hint: "This will not be visible to other users." %>
-
-    <div class="user-password-change">
-      <%= f.input :password,
+      <div class="user-password-change">
+        <%= f.input :password,
                 hint: "Leave it blank if you don't want to change your password.",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
+        <%= f.input :password_confirmation,
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
-    </div>
-
-    <div class="password-confirmation">
-      <%= f.input :current_password,
+      </div>
+      <div class="password-confirmation">
+        <%= f.input :current_password,
                 hint: "We need your current password to confirm your changes.",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+      </div>
     </div>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update", class: 'btn btn-block edit-user-update-btn' %>
-  </div>
-<% end %>
-
-<%= link_to "Back", :back %>
+    <div class="form-actions">
+      <%= f.button :submit, "Update", class: 'btn btn-block edit-user-update-btn' %>
+    </div>
+  <% end %>
