--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -2,7 +2,7 @@
   <div class="landing-title">Welcome to</div>
   <%= image_tag("beta-logo.png", class: "landing-logo") %>
   <div class="landing-explanation">
-    <div class="landing-explanation-basic">If you have an idea in mind, create a geo-tagged <b>Opportunity</b> and give it a target completion date. Opportunities are broken down into individual tasks and responsibilities called <b>Requirements</b>. 
+    <div class="landing-explanation-basic">Just Be Human is a platform where anyone can organize and give back to their community! If you have an idea for a way to improve your community in mind, create a geo-tagged <b>Opportunity</b> and give it a target completion date. Opportunities are broken down into individual tasks and responsibilities called <b>Requirements</b>. 
       <div class="landing-explanation-detail">
         - If you know what's needed to complete the task, your Opportunity is <b>defined</b>. 
       </div>
@@ -38,3 +38,4 @@
     <small>* Forgive us our bugs! We're a small team and we're working as hard as we can to sand down the rough edges.</small>
   </div>
 </div>
+"index_requirement_roles_on_problem_id"
