--- a/app/views/requirements/show.html.erb
+++ b/app/views/requirements/show.html.erb
@@ -14,54 +14,87 @@
     <div class="requirement-info-description">
       <%= @requirement.description %>
     </div>
+    <div class="requirement-info-grid">
+      <div class="requirement-info-left">
+        <% leader = @requirement.leader %>
+        <% if leader %>
+          <div class="requirement-info-row">
+            Led By 
+            <div class="requirement-info-content">
+              <%= leader.username %>
+            </div>
+          </div>
+        <% else %>
+          <div class="requirement-info-row needs-leader">
+            This requirement needs a leader!
+          </div>
+        <% end %>
+        <div class="requirement-info-row">
+          Category 
+          <div class="requirement-info-content">
+            <%= @requirement.category_title %>
+          </div>
+        </div>
+        <div class="requirement-info-row">
+          Target Completion 
+          <div class="requirement-info-content">
+            <%= @requirement.target_completion_date %>
+          </div>
+        </div>
+        <div class="requirement-info-row">
+          Volunteers 
+          <div class="requirement-info-content">
+            <%= @requirement.volunteer_count %> / <%= @requirement.volunteers_required %>
+          </div>
+        </div>
+      </div>
+      <div class="requirement-info-right">
+        <% if !@req_level && @opp_level %>
+          <a href="/requirements/participate?requirement_id=<%= @requirement.id %>">
+            <div class="volunteer-btn-div">
+              Volunteer to help!
+            </div>
+          </a>
+        <% end %>
+      </div>
+    </div>
     <div class="requirement-meta">
       <p>Priority: <%= @requirement.priority %></p>
       <p>Estimated difficulty: <%= @requirement.estimated_work.round %>/10</p>
     </div>
   </div>
-
-  <% if @overdue %>
+  <% if @requirement.overdue? %>
     <div class="overdue-warning">
       This requirement is overdue!
     </div>
   <% end %>
   <!--  This next part is so that we can use different progress bars based on the percentage. Green if it's < 40% work remaining, orange for 40-70, and red for 70+  -->
-  <% progress = @requirement.pct_work_remaining %>
-  <% progress_display = @requirement.pct_remaining_display %>
-
+  <% progress = @requirement.pct_done %>
+  <% progress_display = @requirement.pct_done_display %>
   <div class="progress-title">
     <h4>Current status:</h4>
   </div>
   <div class="progress">
-    <% if progress >= 70 %>
-      <div class="progress-bar progress-bar-striped bg-danger" style="width:<%= progress_display %>">
+    <% if progress >= 60 %>
+      <div class="progress-bar progress-bar-striped bg-success" style="width:<%= progress_display %>">
         <small class="work-remaining">
-          <%= @requirement.current_status %>
+          <%= @requirement.status %>
         </small>
       </div>
-    <% elsif progress >= 40 && progress < 70 %>
+    <% elsif progress >= 25 && progress < 60 %>
       <div class="progress-bar progress-bar-striped bg-warning" style="width:<%= progress_display %>">
         <small class="work-remaining">
-          <%= @requirement.current_status %>
+          <%= @requirement.status %>
         </small>
       </div>
     <% else %>
-      <div class="progress-bar progress-bar-striped bg-success" style="width:<%= progress_display %>">
+      <div class="progress-bar progress-bar-striped bg-danger" style="width:<%= progress_display %>">
         <small class="work-remaining">
-          <%= @requirement.current_status %>
+          <%= @requirement.status %>
         </small>
       </div>
     <% end %>
   </div>
-
-  <% if !@req_level && @prob_level %>
-    <a href="/requirements/participate?requirement_id=<%= @requirement.id %>">
-      <div class="volunteer-btn-div">
-        Volunteer to help!
-      </div>
-    </a>
-  <% end %>
-
   <div class="requirement-posts">
     <div class="posts-container">
       <div class="requirement-posts-title">Posts</div>
@@ -72,11 +105,13 @@
             <a href="/posts/<%= post.id %>" class="post-link">
               <p class="post-title"><%= post.title %></p>
               <p class="post-excerpt"><strong>Excerpt: <%= post.display_content %></strong></p>
-              <p class="post-author"><%= post_user.username %><span> on <%= post.created_at.strftime('%m/%d/%Y') %></span></p>
+              <p class="post-author"><%= post_user.username %>
+                <div> on <%= post.created_at.strftime('%m/%d/%Y') %></div>
+              </p>
             </a>
           </div>
         <% end %>
-        <% if current_user && (@req_level || (@prob_level && @prob_level <= 2)) %>
+        <% if current_user && (@req_level || (@opp_level && @opp_level <= 2)) %>
           <div class="add-post-button">
             <%= link_to 'Add A Post', new_post_path(:requirement => {:requirement_id => @requirement.id}), class: "btn btn-success btn-lg", data: { modal: true } %>
           </div>
@@ -84,14 +119,13 @@
       </div>
     </div>
   </div>
-
   <div class="link-group d-flex flex-column">
     <% if @req_level && @req_level >= 2 %>
-    <%= link_to 'Cancel your participation', controller: 'requirements', action: 'cancel_participation', requirement_id: @requirement.id %>
+      <%= link_to 'Cancel your participation', controller: 'requirements', action: 'cancel_participation', requirement_id: @requirement.id %>
     <% end %>
-    <% if @prob_level && (@prob_level <= 2 || (@req_level && @req_level < 2)) %>
+    <% if @opp_level && (@opp_level <= 2 || (@req_level && @req_level < 2)) %>
       <%= link_to 'Edit this requirement', edit_requirement_path(@requirement) %>
     <% end %>
-    <%= link_to 'Back to parent problem', @problem %>
+    <%= link_to 'Back to parent opportunity', @opportunity %>
   </div>
 </div>
